--- a/folder1/index.html
+++ b/folder1/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learning HTML for full stack" />
+    <meta name ="keywords" content ="HTML,CC,JS,MERN" />
+    <meta name ="author" content ="ABI SHREE" />
+    <!-- hhtp-equvi-->
+     <meta http-equiv="refresh" content="10,url=https://www.amazon.in/?tag=msndeskabkin-21&ref=pd_sl_8m0512m97v_e&adgrpid=1317216540160148&hvadid=82326299627209&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=149830&hvtargid=kwd-82326918609608:loc-90&hydadcr=5623_2377284&mcid=f13fcffd1964377ea436bb8da9e6f147" />
     <title>Mern Stack</title>
 </head>
 <body>
