--- a/folder1/index.html
+++ b/folder1/index.html
@@ -7,10 +7,51 @@
     <meta name ="keywords" content ="HTML,CC,JS,MERN" />
     <meta name ="author" content ="ABI SHREE" />
     <!-- hhtp-equvi-->
-     <meta http-equiv="refresh" content="10,url=https://www.amazon.in/?tag=msndeskabkin-21&ref=pd_sl_8m0512m97v_e&adgrpid=1317216540160148&hvadid=82326299627209&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=149830&hvtargid=kwd-82326918609608:loc-90&hydadcr=5623_2377284&mcid=f13fcffd1964377ea436bb8da9e6f147" />
+    < <meta http-equiv="refresh" content="5,url=https://www.amazon.in/?tag=msndeskabkin-21&ref=pd_sl_8m0512m97v_e&adgrpid=1317216540160148&hvadid=82326299627209&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=149830&hvtargid=kwd-82326918609608:loc-90&hydadcr=5623_2377284&mcid=f13fcffd1964377ea436bb8da9e6f147" />
     <title>Mern Stack</title>
 </head>
 <body>
+   <a href ="./index1.html" target="_blank">visit my website</a>
+   <a href = "#a">pixel</a>
+   <table border="2">
+      <thead>
+         <tr>
+            <th> NAME</th>
+            <th> EMAIL</th>
+            <th> CONATCT</th>
+         </tr>
+      </thead>
+      <tbody>
+         <tr>
+            <td> ABI</td>
+            <td> abi@gmail.com</td>
+            <td>  1234567892</td>
+         </tr>
+         <tr>
+            <td> SRIJA</td>
+            <td> srija@gmail.com </td>
+            <td>  9876543216</td>
+         </tr>
+      </tbody>
+   </table>
+   <p> alteration of tables </p>
+   <table border="5">
+      <thead>
+         <th>
+         <td> Name</td>
+         <td> EMAIL</td>
+         <td> CONTACT</td>
+         </th>
+         
+      </thead>
+      <tbody>
+         <tr> ABI </tr>
+         <tr>  SRIJA </tr>
+         <tr> RENNA </tr>
+      </tbody>
+
+   </table>
+   <!--block level tag-->
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
@@ -41,12 +82,15 @@
      ></iframe>
 
      <form action="">
+      <legend> Contact</legend>
+      <fieldset>
         <label for="Name">Name</label>
         <input type="text" id="Name" minlength="5" maxlength="10" required/>
         <input type="email" required />
         <input type ="password" name="" id="" required/>
         <input type="number" min="3" max="6" required/>
         <button type="submit">submit</button>
+        </fieldset>
      </form>
      
      <!-- ul -->
