--- a/folder1/grid.html
+++ b/folder1/grid.html
@@ -3,20 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>grid</title>
-    <link rel="stylesheet"href="grid.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="grid.css" /> 
 </head>
 <body>
-    <div class="gridContainer">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
-    </div>
-    
+    <!-- <div class="gridcontainer">
+        <div class="Item">1</div>
+        <div class="Item">2</div>
+        <div class="Item">3</div>
+        <div class="Item">4</div>
+        <div class="Item">5</div>
+        <div class="Item">6</div>
+        <div class="Item">7</div>
+        <div class="Item">8</div>
+    </div> -->
+    <header>Header</header>
+    <nav>Nav</nav>
+    <main>Main</main>
+    <aside>Aside</aside>
+    <footer>Footer</footer>
+
+    <!-- <div class="main">
+        <div class="flexItem">Flex Item1</div>
+        <div class="flexItem">Flex Item2</div>
+        <div class="flexItem">Flex Item3</div>
+        <div class="flexItem">Flex Item4</div>
+        <div class="flexItem">Flex Item5</div>
+        <div class="flexItem">Flex Item6</div> -->
 </body>
 </html>
